--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -28,6 +28,13 @@
                 </li>
             </ul>
         </div>
+        @{
+            string login = HttpContext.Current.User.Identity.Name;
+            if (!string.IsNullOrWhiteSpace(login))
+            {
+                <span class="float-right">Hi, @login | <a href="/Account/Logout">Logout</a></span>
+            }
+        }
     </nav>
 
     <div class="container">
